[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.24.0"
itertools = "0.13.0"
num-traits = "0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"

[dependencies.bevy]
version = "0.13"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

